Add myself to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 hongqn hongqn#gmail.com -- original wrapper for the libmemcache
 subdragon subdragon#gmail.com -- wrapper for the libmemcached and current maintainer
+schmichael michael@susens-schurter.com -- added pre-generated C file
